# WikiWatch

./: .env.template  README.md  app.py  pyproject.toml  run.sh  setup.sh
client/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  setupTests.ts
client/src/components/BarChart/: index.test.tsx  index.tsx
client/src/components/BooleanPieChart/: index.test.tsx  index.tsx
client/src/components/Card/: index.ts
client/src/components/ChangeDeltaTimeline/: index.test.tsx  index.tsx
client/src/components/Content/: index.tsx
client/src/components/Header/: index.tsx
client/src/helpers/: colours.ts  formatDateTime.test.ts  formatDateTime.ts  gridSizes.test.ts  gridSizes.ts  mediaQuery.ts  numberFormatter.test.ts  numberFormatter.ts  statistics.ts  useDebouncedState.test.ts  useDebouncedState.ts  useRenderedColumnsWidth.test.ts  useRenderedColumnsWidth.ts
migrations/versions/: 10d1615b80b7_created_timestamp.py  522c7200e254_edit_events.py
models/: edit_event.py
services/: analytics.py
sockets/: __init__.py
tests/: conftest.py  test_analytics.py  test_edit_event.py  test_exceptions.py  test_time_zones.py
