[tool.poetry]
name = "wiki-watch"
version = "0.1.0"
description = ""
authors = ["Charlie Cumber <chukc@hotmail.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
mysql = "^0.0.3"
websockets = "^11.0.2"
pytz = "^2023.3"
flask-socketio = "^5.3.3"
pandas = "^2.0.1"
mysqlclient = ">=2.2"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
